crates/backlog-api-macros/tests/ui/enum_not_supported.stderr
error: ToFormParams can only be derived for structs
 --> tests/ui/enum_not_supported.rs:4:1
  |
4 | enum NotSupported {
  | ^^^^
