crates/backlog-api-macros/tests/ui/enum_not_supported.rs
use backlog_api_macros::ToFormParams;

#[derive(ToFormParams)]
enum NotSupported {
    A,
    B,
}

fn main() {}
